--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,72 +1,53 @@
+{#
+govuk_template.html defines the following blocks:
 
-<!doctype html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
+- top_of_page
+- page_title
+- head
+- body_classes
+- body_start
+- cookie_message
+- header_class
+- inside_header
+- proposition_header
+- after_header
+- content
+- footer_top
+- footer_support_links
+- body_end
 
-  <title>{% block page_title %}
-  
-    Smoke And Mirrors
-  
-    {% endblock %}
-  </title>
-  <meta name="description" content="{% block meta_description %}{% endblock %}">
-  <meta name="author" content="{% block meta_author %}{% endblock %}">
+See https://github.com/alphagov/govuk_template for more
+information regarding the template.
 
-  <!-- Mobile viewport optimized: h5bp.com/viewport -->
-  <meta name="viewport" content="width=device-width">
+#}
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='libs/font-awesome4/css/font-awesome.min.css') }}">
-  {% assets "css_all" %}
+{% extends "govuk_template/views/layouts/govuk_template.html" %}
+
+{% block head %}
+
+  {# for bundle definitions, see assets.py #}
+
+  {% assets "css_govuk" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
   {% endassets %}
 
-  {% block css %}{% endblock %}
+  {% assets "css_app" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}">
+  {% endassets %}
 
-</head>
-<body class="{% block body_class %}{% endblock %}">
-{% block body %}
-{% with form=form  %}
-{% include "nav.html" %}
-{% endwith %}
-
-<header>{% block header %}{% endblock %}</header>
-<div class="{% block content_class %}container{% endblock content_class %}">
-
-  <div role="main">
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    <div class="row">
-      <div class="col-md-12">
-        {% for category, message in messages %}
-        <div class="alert alert-{{ category }}">
-          <a class="close" title="Close" href="#" data-dismiss="alert">&times;</a>
-         {{message}}
-        </div><!-- end .alert -->
-        {% endfor %}
-      </div><!-- end col-md -->
-    </div><!-- end row -->
-        {% endif %}
-    {% endwith %}
-
-    {% block content %}{% endblock %}
-  </div>
-
-</div><!-- end container -->
-
-{% include "footer.html" %}
-
-<!-- JavaScript at the bottom for fast page loading -->
-{% assets "js_all" %}
-    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-{% endassets %}
-{% block js %}{% endblock %}
-<!-- end scripts -->
 {% endblock %}
-</body>
-</html>
 
+{% block body_end %}
+
+  {# TODO jsmin etc #}
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+
+  {% assets "js_govuk" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+  {% endassets %}
+
+  {% assets "js_app" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+  {% endassets %}
+
+{% endblock %}
