--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -1,5 +1,4 @@
-
-{% extends "govuk_template/views/layouts/govuk_template.html" %}
+{% extends "layout.html" %}
 {% block content %}
 
 <main id="content" role="main">
