--- a/application/jobs/static/css/review.scss
+++ b/application/jobs/static/css/review.scss
@@ -1,4 +1,8 @@
-@import 'elements';
+// See assets.py
+// Even though govuk.css is built for all views, we
+// still include it here for access to SASS variables.
+@import '../../../static/css/govuk';
+
 @import 'components/back_link';
 @import 'components/profile';
 
