new routes signup

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -15,6 +15,9 @@
     <li>
       <a href="/signup/create">Sign up</a>
     </li>
+    <li>
+      <a href="/signup/basic">Sign up (basic)</a>
+    </li>
     <li>Basic profile</li>
     <li>People search</li>
   </ul>
