--- a/application/signup/static/css/signup.scss
+++ b/application/signup/static/css/signup.scss
@@ -32,7 +32,7 @@
 
 $google: #dd4b39;
 $facebook: #3B5998;
-.signup__btn--google {
+.signup__btn--google, .signup__btn--google:hover {
   background: $google;
   padding-left: 53px;
 }
@@ -41,6 +41,6 @@ $facebook: #3B5998;
   background-image: url(/static/images/google_icon.png);
 }
 
-.signup__btn--facebook {
+.signup__btn--facebook, .signup__btn--facebook:hover {
   background: $facebook;
 }
