migrate email_referred from old prototype

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -13,10 +13,10 @@
   <h3 class="heading-medium">Profile</h3>
   <ul>
     <li>
-      <a href="/signup/create">Sign up</a>
+      <a href="/signup/create">Sign up</a> (not complete)
     </li>
     <li>
-      <a href="/signup/basic">Sign up (basic)</a>
+      <a href="/signup/basic">Basic sign up</a> (not complete)
     </li>
     <li>Basic profile</li>
     <li>People search</li>
@@ -24,6 +24,9 @@
 
   <h3 class="heading-medium">Jobs</h3>
   <ul>
+    <li>
+      <a href="/jobs/email_referred">referred by email</a>
+    </li>
     <li>
       <a href="/jobs/search_by_skill">Job search by skill</a>
     </li>
