add contracts route

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -33,7 +33,9 @@
     <li>Application</li>
     <li>
       <a href="/jobs/your_apps">Application status</a></li>
-    <li>Contract</li>
+    <li>
+      <a href="/jobs/contract">Contract</a>
+    </li>
   </ul>
   <h4 class="heading-small">Job descriptions</h4>
   <ul>
