mimick being logged in

--- a/application/signup/static/css/signup.scss
+++ b/application/signup/static/css/signup.scss
@@ -44,3 +44,15 @@ $facebook: #3B5998;
 .signup__btn--facebook, .signup__btn--facebook:hover {
   background: $facebook;
 }
+
+.success__summary {
+  visibility: hidden;
+
+  .loggedin & {
+    visibility: visible;
+  }
+}
+
+.loggedin .creation__form {
+  display: none;
+}
