--- a/application/signup/templates/basic.html
+++ b/application/signup/templates/basic.html
@@ -4,7 +4,7 @@
 
   <a href="/" class="example-back-link">Back to the cross government tools' prototypes</a>
 
-  <form action="">
+  <form class="creation__form" action="">
     <div class="form-group">
       <label class="form-label-bold" for="email">Email</label>
       <input type="text" class="form-control signup__input" id="email">
@@ -22,6 +22,10 @@
       </ul>
     </div>
   </form>
+
+  <div class="success__summary">
+    <p class="lede">Account successfully created</p>
+  </div>
 
 </main><!-- / #page-container -->
 {% endblock %}
