--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -40,7 +40,10 @@
   <h4 class="heading-small">Job descriptions</h4>
   <ul>
     <li>
-      <a href="/jobs/description_developer">Developer job description</a>
+      <a href="/jobs/description_backend_developer">Back-end developer job description</a>
+    </li>
+    <li>
+      <a href="/jobs/description_frontend_developer">Front-end developer job description</a>
     </li>
     <li>
       <a href="/jobs/description_policy">Policy job description (not complete)</a>
