update policy and general job descriptions

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -46,10 +46,10 @@
       <a href="/jobs/description_frontend_developer">Front-end developer job description</a>
     </li>
     <li>
-      <a href="/jobs/description_policy">Policy job description (not complete)</a>
+      <a href="/jobs/description_policy">Policy job description</a>
     </li>
     <li>
-      <a href="/jobs/description_general">General job description (not complete)</a>
+      <a href="/jobs/description_general">General job description</a>
     </li>
   </ul>
 
