create basic profile skeleton pages

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -18,7 +18,8 @@
     <li>
       <a href="/signup/basic">Basic sign up</a> (not complete)
     </li>
-    <li>Basic profile</li>
+    <li>
+      <a href="/signup/basicprofile">Basic profile</a></li>
     <li>People search</li>
   </ul>
 
