--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -54,6 +54,13 @@
     </li>
   </ul>
 
+  <h3 class="heading-medium">Pre Joining</h3>
+  <ul>
+    <li>
+      <a href="/prejoining/pass_data">data request for pass</a>
+    </li>
+  </ul>
+
   <h3 class="heading-medium">Professions</h3>
   <ul>
     <li><a href="/professions/hub">a profession's hub page</a></li>
