--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -3,8 +3,6 @@
 // still include it here for access to SASS variables.
 @import '../../../static/css/govuk';
 
-@import '../../../static/govuk_elements/public/sass/elements/lists';
-
 #global-header-bar {
   display: none;
 }
@@ -39,4 +37,25 @@
 
 .temp {
   height: 330px;
+}
+
+.revoke__btn {
+  margin-top: em(25, 20);
+
+  @include media(tablet) {
+    margin-top: em(45, 24);
+  }
+}
+
+.service__item {
+  border-bottom: 1px dotted $panel-colour;
+}
+
+.secondary {
+  color: $secondary-text-colour;
+  font-size: 16px;
+
+  span {
+    display: block;
+  }
 }
