add skeleton pages for other parts of profile

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -4,7 +4,7 @@
 {% include "partials/nav.html" ignore missing %}
 
 <main id="content" role="main">
-  <h1 class="heading-large">You</h1>
+  <h1 class="heading-large">Learning</h1>
   <section class="temp"></section>
 </main>
 
