add blueprint being_a_civil_servant, with route addreceipt

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -66,6 +66,11 @@
     <li><a href="/professions/hub">a profession's hub page</a></li>
   </ul>
 
+  <h3 class="heading-medium">Day to day</h3>
+  <ul>
+    <li><a href="/being_a_civil_servant/addreceipt">add receipt (not complete)</a></li>
+  </ul>
+
   <h3 class="heading-medium">Performance</h3>
   <ul>
     <li>Select people to review you</li>
