--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -4,7 +4,14 @@
 {% include "partials/nav.html" ignore missing %}
 
 <main id="content" role="main">
-  <section class="temp"></section>
+  <div class="grid-row">
+    <div class="column-third">
+      <section class="container">
+      {% include "partials/basicprofile.html" ignore missing %}
+      </section>
+    </div>
+    <div class="column-two-thirds"></div>
+  </div>
 </main>
 
 {% endblock %}
