--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -5,6 +5,7 @@
 
 @import 'components/profile';
 @import 'components/basicprofile';
+@import 'components/services';
 
 #global-header-bar {
   display: none;
@@ -40,27 +41,6 @@
 
 .temp {
   height: 330px;
-}
-
-.revoke__btn {
-  margin-top: em(25, 20);
-
-  @include media(tablet) {
-    margin-top: em(45, 24);
-  }
-}
-
-.service__item {
-  border-bottom: 1px dotted $panel-colour;
-}
-
-.secondary {
-  color: $secondary-text-colour;
-  font-size: 16px;
-
-  span {
-    display: block;
-  }
 }
 
 // for sections containing widgets
