make basic profile data driven

--- a/application/signup/templates/partials/basicprofile.html
+++ b/application/signup/templates/partials/basicprofile.html
@@ -2,8 +2,12 @@
   <div class="basicprofile__content">
     <img src="http://placehold.it/100x100" class="basicprofile__pic">
     <div class="basicprofile__content__items">
-      <h3 class="heading-small basicprofile__name">Colm Britton</h3>
-      <p class="basicprofile__email"><a href="">colm.britton@digital.cabinet-office.gov.uk</a></p>
+      <h3 class="heading-small basicprofile__name">{{ person.name }}</h3>
+      {% if person.cs %}
+      <p class="basicprofile__email"><a href="">{{ person.emails.work }}</a></p>
+      {% else %}
+      <p class="basicprofile__email"><a href="">{{ person.emails.personal }}</a></p>
+      {% endif %}
     </div>
   </div>
 </div>
