--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -4,8 +4,14 @@
 {% include "partials/nav.html" ignore missing %}
 
 <main id="content" role="main">
-  <h1 class="heading-large">You</h1>
-  <section class="temp"></section>
+  <div class="grid-row">
+    <div class="column-third">
+      <section class="container">
+      {% include "partials/basicprofile.html" ignore missing %}
+      </section>
+    </div>
+    <div class="column-two-thirds"><div>
+  </div>
 </main>
 
 {% endblock %}
