add basic welcome options

--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -10,7 +10,17 @@
       {% include "partials/basicprofile.html" ignore missing %}
       </section>
     </div>
-    <div class="column-two-thirds"></div>
+    <div class="column-two-thirds">
+      <h1 class="heading-large">Welcome to your gov.uk profile</h1>
+      <p class="lede text">This is the one stop shop for your professional relationship with the government.</p>
+      <p class="text">At the moment all we know about is your name and email address. Why don't you do one of the following:</p>
+      <ul class="list-bullet">
+        <li><a href="">Job application search</a></li>
+        <li><a href="">Update your details</a></li>
+        <li><a href="">Link your linkedin account</a></li>
+        <li><a href="">Tell us about your skills</a></li>
+      </ul>
+    </div>
   </div>
 </main>
 
