add skeleton actions to non cs profile

--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -15,11 +15,27 @@
       <p class="lede text">This is the one stop shop for your professional relationship with the government.</p>
       <p class="text">At the moment all we know about is your name and email address. Why don't you do one of the following:</p>
       <ul class="list-bullet">
-        <li><a href="">Job application search</a></li>
+        <li><a href="/signup/basicprofile_jobs">Job application search</a></li>
         <li><a href="">Update your details</a></li>
         <li><a href="">Link your linkedin account</a></li>
         <li><a href="">Tell us about your skills</a></li>
       </ul>
+
+      <section class="section">
+        <h3 class="heading-medium">Associate Linkedin</h3>
+      </section>
+
+      <section class="section">
+        <h3 class="heading-medium">Upload CV</h3>
+        <form>
+          <input type="file" class="form-control" />
+        </form>
+      </section>
+
+      <section class="section">
+        <h3 class="heading-medium">Your Skills</h3>
+      </section>
+
     </div>
   </div>
 </main>
