--- a/application/signup/templates/csprofile_jobs.html
+++ b/application/signup/templates/csprofile_jobs.html
@@ -10,7 +10,7 @@
           <ul class="side-menu">
             <li class="side-menu__item side-menu__item--active"><a href="">Search</a></li>
             <li class="side-menu__item"><a href="">History</a></li>
-            <li class="side-menu__item"><a href="">Alerts</a></li>
+            <li class="side-menu__item"><a href="/signup/csprofile_jobs/alerts">Alerts</a></li>
           </ul>
       </section>
     </div>
