add sample perf profile

--- a/application/signup/templates/csprofile_perf.html
+++ b/application/signup/templates/csprofile_perf.html
@@ -7,6 +7,19 @@
   <div class="grid-row">
     <div class="column-quarter">
       <section class="container">
+        <h5 class="heading-small">Colm Britton</h5>
+        <ul class="job__info">
+          <li>Front-end designer</li>
+          <li>Grade A</li>
+        </ul>
+        <dl>
+          <dt>Last review:</dt>
+          <dd>20th Mar 2015</dd>
+          <dt>Next review:</dt>
+          <dd>17th Jul 2015</dd>
+        </dl>
+      </section>
+      <section class="container section">
           <ul class="side-menu">
             <li class="side-menu__item side-menu__item--active"><a href="">Activities</a></li>
             <li class="side-menu__item"><a href="">Objectives</a></li>
