--- a/application/signup/templates/partials/job_alerts.html
+++ b/application/signup/templates/partials/job_alerts.html
@@ -14,7 +14,10 @@
       <dd class="skill">CSS</dd>
     </dl>
     <button class="job-alert__remove">x</button>
-    <span class="job-alert__toggle">on/off</span>
+    <div class="job-alert__switch">
+      <input id="jas-toggle-1" class="job-alert__toggle job-alert__toggle--on-off" type="checkbox" checked>
+      <label for="jas-toggle-1" data-on="On" data-off="Off"></label>
+    </div>
   </li>
   <li class="job-alert">
     <dl class="job-alert__param">
@@ -31,7 +34,10 @@
       <dd class="skill">CSS</dd>
     </dl>
     <button class="job-alert__remove">x</button>
-    <span class="job-alert__toggle">on/off</span>
+    <div class="job-alert__switch">
+      <input id="jas-toggle-2" class="job-alert__toggle job-alert__toggle--on-off" type="checkbox">
+      <label for="jas-toggle-2" data-on="On" data-off="Off"></label>
+    </div>
   </li>
   <li class="job-alert">
     <dl class="job-alert__param">
@@ -49,6 +55,9 @@
       <dd class="skill">Agile</dd>
     </dl>
     <button class="job-alert__remove">x</button>
-    <span class="job-alert__toggle">on/off</span>
+    <div class="job-alert__switch">
+      <input id="jas-toggle-3" class="job-alert__toggle job-alert__toggle--on-off" type="checkbox">
+      <label for="jas-toggle-3" data-on="On" data-off="Off"></label>
+    </div>
   </li>
 </ul>
