--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -19,7 +19,11 @@
       <a href="/signup/basic">Basic sign up</a> (not complete)
     </li>
     <li>
-      <a href="/signup/basicprofile">Basic profile</a></li>
+      <a href="/signup/basicprofile">Basic profile</a>
+    </li>
+    <li>
+      <a href="/signup/csprofile">CS profile</a>
+    </li>
     <li>People search</li>
   </ul>
 
