--- a/application/signup/templates/basicprofile_jobs_apps.html
+++ b/application/signup/templates/basicprofile_jobs_apps.html
@@ -14,7 +14,8 @@
     </section>
   </section>
   <section class="column-three-quarter">
-    {% include "partials/job_search.html" ignore missing %}
+    {% include "partials/your_apps_head.html" ignore missing %}
+    {% include "partials/your_apps_list.html" ignore missing %}
   </section>
 </main>
 
