--- a/application/signup/templates/csprofile_jobs.html
+++ b/application/signup/templates/csprofile_jobs.html
@@ -14,7 +14,7 @@
       </section>
     </div>
     <div class="column-three-quarter">
-      <h1 class="heading-large">Jobs</h1>
+      {% include "partials/job_search.html" ignore missing %}
     </div>
   </div>
 
