--- a/application/signup/templates/csprofile_jobs_apps.html
+++ b/application/signup/templates/csprofile_jobs_apps.html
@@ -14,7 +14,8 @@
       </section>
     </div>
     <div class="column-three-quarter">
-      <h1 class="heading-large">Jobs</h1>
+      {% include "partials/your_apps_head.html" ignore missing %}
+      {% include "partials/your_apps_list.html" ignore missing %}
     </div>
   </div>
 
