--- a/application/signup/templates/partials/job_search.html
+++ b/application/signup/templates/partials/job_search.html
@@ -14,6 +14,6 @@
     <div>balh blah blah</div>
   </details>
 
-  <nav class="nav"><span><a href="/jobs/your_apps" title="view your applications">view saved</a></span></nav>
+  <!--<nav class="nav"><span><a href="/jobs/your_apps" title="view your applications">view saved</a></span></nav>-->
 
 </form>
