create add expenses widget

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -10,6 +10,7 @@
 @import 'components/job_alerts';
 @import 'components/skills';
 @import 'components/profile_nav';
+@import 'components/add_widget';
 
 // global for all profile based pages
 #global-header-bar {
