--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -10,7 +10,9 @@
       {% include "partials/basicprofile.html" ignore missing %}
       </section>
     </div>
-    <div class="column-two-thirds"><div>
+    <div class="column-two-thirds">
+      {% include "partials/add_expenses_widget.html" ignore missing %}
+    <div>
   </div>
 </main>
 
