add link back to home page from all pages

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -37,6 +37,8 @@ information regarding the template.
 
 {% endblock %}
 
+{% block inside_header %}<a href="/">xgts</a>{% endblock %}
+
 {% block body_end %}
 
   {# TODO jsmin etc #}
