--- a/application/being_a_civil_servant/templates/addreceipt.html
+++ b/application/being_a_civil_servant/templates/addreceipt.html
@@ -14,16 +14,84 @@
 
 {% block content %}
 <main id="content" role="main">
-  <a href="/" class="example-back-link">Back to the cross government tools' prototypes</a>
+
+  <h1 class="heading-large">Expense claims</h1>
 
   <section class="section">
-    <h2 class="heading-medium">Add receipts</h2>
-    <input type="file" id="take-picture" accept="image/*">
+    <h2 class="heading-medium">Add items</h2>
+    <form class="form">
+      <div class="form-group">
+        <label class="form-label" for="item-description">Description</label>
+        <p class="form-hint">Explain purpose of expense</p>
+        <input type="text" class="form-control" id="item-description">
+      </div>
+      <div class="form-group">
+        <label for="take-picture" class="form-label">Upload receipts</label>
+        <input type="file" id="take-picture" accept="image/*">
+      </div>
+    </form>
   </section>
 
   <section class="section">
     <h2 class="heading-medium">Preview:</h2>
-    <img src="about:blank" alt="" id="show-picture" />
+    <ul class="grid-row receipt__list">
+      <li class="column-third receipt-process__container hidden">
+        <div class="receipt-process">
+          <img src="about:blank" alt="" id="show-picture" class="receipt-process__image" />
+          <div class="receipt-bank-block">
+            <img class="receipt-bank-logo" src="/being_a_civil_servant/static/images/receipt-bank-logo.png" alt="" />
+            <div class="receipt-bank-processing">
+              <img src="/being_a_civil_servant/static/images/receipt-bank-loader.gif" alt="" />
+              <span class="receipt-bank-action">processing</span>
+            </div>
+            <div class="receipt-bank-processed">
+              <span class="receipt__amount">£152</span>
+              <span class="receipt-bank-action">processed</span>
+            </div>
+          </div>
+          <p class="receipt__description">Train tickets to Newcastle</p>
+          <button class="button receipt__submit">submit</button>
+        </div>
+      </li>
+    </ul>
+    
+  </section>
+
+  <section class="section">
+    <table>
+      <thead>
+        <tr>
+          <th scope="col">Date</th>
+          <th scope="col">Description</th>
+          <th class="numeric" scope="col">Total (£)</th>
+          <th class="numeric" scope="col">Approved</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>25th Mar</td>
+          <td>Train tickets to Newcastle</td>
+          <td class="numeric">172</td>
+          <td class="numeric">waiting</td>
+        </tr>
+        <tr>
+          <td>12th Apr</td>
+          <td>Train tickets to Bristol</td>
+          <td class="numeric">68</td>
+          <td class="numeric">yes</td>
+        </tr>
+        <tr>
+          <td>14th Apr</td>
+          <td>Additional data for mobile</td>
+          <td class="numeric">5</td>
+          <td class="numeric">yes</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <section class="section">
+    <button class="button">Submit claim</button>
   </section>
 
 </main><!-- / #page-container -->
@@ -32,6 +100,8 @@
 {% block body_end %}
 
   {{ super() }}
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 
   {% assets "being_a_civil_servant/js/receipts.js",
       filters="jsmin", output="gen/js/receipts.js" %}
