add expense line to table

--- a/application/being_a_civil_servant/templates/addreceipt.html
+++ b/application/being_a_civil_servant/templates/addreceipt.html
@@ -16,6 +16,7 @@
 <main id="content" role="main">
 
   <h1 class="heading-large">Expense claims</h1>
+  <p class="text lede">Quickly upload photos of your receipts to claim expenses</p>
 
   <section class="section">
     <h2 class="heading-medium">Add items</h2>
@@ -58,32 +59,32 @@
   </section>
 
   <section class="section">
-    <table>
+    <table class="expenses__table">
       <thead>
         <tr>
           <th scope="col">Date</th>
           <th scope="col">Description</th>
-          <th class="numeric" scope="col">Total (£)</th>
+          <th class="numeric" scope="col">Total</th>
           <th class="numeric" scope="col">Approved</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>25th Mar</td>
+          <td>25 Mar</td>
           <td>Train tickets to Newcastle</td>
-          <td class="numeric">172</td>
+          <td class="numeric">£172</td>
           <td class="numeric">waiting</td>
         </tr>
         <tr>
-          <td>12th Apr</td>
+          <td>12 Apr</td>
           <td>Train tickets to Bristol</td>
-          <td class="numeric">68</td>
+          <td class="numeric">£68</td>
           <td class="numeric">yes</td>
         </tr>
         <tr>
-          <td>14th Apr</td>
+          <td>14 Apr</td>
           <td>Additional data for mobile</td>
-          <td class="numeric">5</td>
+          <td class="numeric">£5</td>
           <td class="numeric">yes</td>
         </tr>
       </tbody>
